@@ -1,48 +1,48 @@
-0 *!*
-1 *?*
-2 *Whistling*
-3 *Heart*
-4 *Sweat*
-5 *Idea*
-6 *$!@#*
-7 *Grumble*
-8 *Zenny!*
-9 *...*
-10 *Peace*
-11 *Fist*
-12 *Wave*
-13 *Flag 1*
-14 *Love*
-15 *Thanks*
-16 *Wah*
-17 *Sorry*
-18 *Heh*
-19 *Sweat*
-20 *Hmm*
-21 *Nice One*
-22 *??*
-23 *Omg*
-24 *Oh*
-25 *X*
-26 *Help*
-27 *Go*
-28 *Sob*
-29 *Good Game*
-30 *Kiss*
-31 *Kiss 2*
-32 *Pfft*
-33 *Ok*
-35 *Flag 2*
-36 *Angry*
-37 *Drool*
-38 *2 Hearts*
-39 *Bleks*
-40 *Na-ah*
-41 *Pat Pat*
-42 *SP*
-43 *Horny*
-44 *Come Here*
-45 *Yawn*
-46 *Congratulations*
-47 *HP*
-48 *Flag 3*
+0 ! *!*
+1 ? *?*
+2 ho *Whistling*
+3 lv *Heart*
+4 swt *Sweat*
+5 ic *Idea*
+6 an *$!@#*
+7 ag *Grumble*
+8 $ *Zeny!*
+9 ... *...*
+10 pea *Peace*
+11 fst *Fist*
+12 wav *Wave*
+13 flg *Flag 1*
+14 lv2 *Love*
+15 thx *Thanks*
+16 wah *Wah*
+17 sry *Sorry*
+18 heh *Heh*
+19 swt2 *Sweat*
+20 hmm *Hmm*
+21 no1 *Nice One*
+22 ?? *??*
+23 omg *Omg*
+24 o,oh *O*
+25 x *X*
+26 hp *Help*
+27 go *Go*
+28 sob *Sob*
+29 gg *Good Game*
+30 kis *Kiss*
+31 kis2 *Kiss 2*
+32 pif *Pfft*
+33 ok *Ok*
+35 flg2 *Flag 2*
+36 e1,bzz *Angry*
+37 e2,rice *Drool*
+38 e3,awsm *2 Hearts*
+39 e4,meh *Bleks*
+40 e5,shy *Na-ah*
+41 e6,pat *Pat Pat*
+42 e7,mp *SP*
+43 e8,slur *Horny*
+44 e9,com *Come Here*
+45 e10,yawn *Yawn*
+46 e11,grat *Congratulations*
+47 e12,hp *HP*
+48 flg3 *Flag 3*
